<resources>
    <string name="app_name">FlatOS</string>
    <string name="token_key">token</string>

    <string name="title_update_list">Updates</string>
    <string name="title_section2">Section 2</string>
    <string name="title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="reg_id_key">pref_reg_id</string>
    <string name="notification_settings">Notifications</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_tone_title">Sound</string>
    <string name="notification_vibrate_title">Vibrate</string>
    <string name="notification_limit_wifi_title">Limit to wifi network</string>
    <string name="notification_limit_wifi_summ">Only notify when connected to specific wifi network</string>
    <string name="notification_limit_wifi_dialog_title">Select wifi network to limit to</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

</resources>
